--- a/src/components/MyNavLink/MyNavLink.module.css
+++ b/src/components/MyNavLink/MyNavLink.module.css
@@ -7,7 +7,7 @@
 }
 
 .activeNavLink {
-  color: palegoldenrod;
+  color: rgb(19, 28, 151);
   border: 1px solid palegoldenrod;
   border-radius: 5px;
 }
