--- a/src/views/ContactsView/ContactsView.module.css
+++ b/src/views/ContactsView/ContactsView.module.css
@@ -2,7 +2,7 @@
   margin: 0 0 30px 0;
   width: fit-content;
   text-shadow: 4px 5px 7px rgba(0, 0, 0, 0.24);
-  color: #393908;
+  color: #5c8561;
 }
 
 .contactsSection {
