--- a/src/views/LoginView/LoginView.module.css
+++ b/src/views/LoginView/LoginView.module.css
@@ -2,7 +2,7 @@
   margin: 0 auto 30px auto;
   width: fit-content;
   text-shadow: 4px 5px 7px rgba(0, 0, 0, 0.24);
-  color: #393908;
+  color: #2b35cc;
 }
 
 .form {
